reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_one_basic_field_string_reflect_both_equally_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructOneBasicFieldStringReflectBothEqually::reflect_output()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothEqually"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothEqually",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "u32"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
]
