reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_one_basic_field_string_reflect_both_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructOneBasicFieldStringReflectBoth::reflect_output()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBoth"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBoth",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::string::String"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
]
