reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_one_basic_field_string_reflect_both_with_attributes_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructOneBasicFieldStringReflectBothDifferently::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothDifferently"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "primitive",
        "name": "i32",
        "description": "32-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothDifferently",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "i32"
            },
            "required": true
          }
        ]
      }
    ]
  }
]
