reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_one_basic_field_u32.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructOneBasicFieldU32::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::tests::basic::TestStructOneBasicFieldU32",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "u32"
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u32",
      "description": "32-bit unsigned integer"
    }
  ]
}
