reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_option.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructOption>()"
---
{
  "name": "",
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructOption",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::option::Option",
              "parameters": [
                {
                  "name": "u8"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "None",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "T"
                }
              }
            ]
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructOption",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::option::Option",
              "parameters": [
                {
                  "name": "u8"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "None",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": [
              {
                "name": "0",
                "type": {
                  "name": "T"
                }
              }
            ]
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
